--- a/ChiapasOculto.WPF/IniciarSesion.xaml
+++ b/ChiapasOculto.WPF/IniciarSesion.xaml
@@ -5,57 +5,111 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ChiapasOculto.WPF"
         mc:Ignorable="d"
-        Title="IniciarSesion" Height="450" Width="800" WindowState="Maximized">
-    <Grid>
-        <Grid Background="#E8FFCC">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="204*"/>
-                <ColumnDefinition Width="51*"/>
-                <ColumnDefinition Width="60*"/>
-                <ColumnDefinition Width="42*"/>
-                <ColumnDefinition Width="43*"/>
-            </Grid.ColumnDefinitions>
+        Title="IniciarSesion" Height="600" Width="1000" WindowState="Maximized">
+
+    <Grid Background="#E8FFCC">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="4*"/>
+            <!-- Más ancho para el formulario -->
+            <ColumnDefinition Width="2*"/>
+            <!-- Imagen derecha -->
+        </Grid.ColumnDefinitions>
+
+        <!-- PANEL IZQUIERDO -->
+        <Grid Grid.Column="0">
             <Grid.RowDefinitions>
-                <RowDefinition Height="7*"/>
-                <RowDefinition Height="44*"/>
-                <!-- Área superior libre -->
                 <RowDefinition Height="Auto"/>
-                <!-- Fila para los botones -->
+                <!-- Encabezado -->
+                <RowDefinition Height="*"/>
+                <!-- Formulario -->
             </Grid.RowDefinitions>
 
+            <!-- Encabezado -->
+            <DockPanel Background="White" LastChildFill="True" Height="100" VerticalAlignment="Top">
+                <!-- Logo -->
+                <Image Source="C:\Users\lizet\OneDrive\Documentos\6TO SEMESTRE\SISTEMAS DE INFORMACIÓN\WPF\ChiapasOculto.WPF\Imagenes\logoc.png"
+                       Height="133" Width="232" Margin="0,-8,0,5" DockPanel.Dock="Left"/>
 
+                <!-- Texto Bienvenido -->
+                <StackPanel VerticalAlignment="Center" DockPanel.Dock="Left" Margin="10,0,0,0">
+                    <TextBlock Text="BIENVENID@" FontWeight="Bold" FontSize="20" Foreground="Black"/>
+                    <TextBlock FontWeight="Bold" Foreground="Red" FontSize="14">
+                        <Run Language="es-mx" Text="("/>
+                        <Run Text="Nombre"/>
+                        <Run Language="es-mx" Text=")"/>
+                    </TextBlock>
+                </StackPanel>
 
-            <Canvas Grid.Row="0" Background="White" Grid.ColumnSpan="5">
-                <TextBlock Text="BIENVENID@" Foreground="Black" FontWeight="Bold"
-               Canvas.Left="152" Canvas.Top="12"/>
+                <!-- Botones -->
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Center" DockPanel.Dock="Right" Margin="0,0,10,0">
+                    <Label x:Name="Registrase" Content="REGISTRARSE" Grid.Column="2" Margin="15,0,15,0" FontWeight="Bold" VerticalAlignment="Center" MouseDoubleClick="Registrase_MouseDoubleClick"/>
+                    <Label Content="INICIAR SESIÓN" Grid.Column="3" Margin="15,0,15,0" FontWeight="Bold" VerticalAlignment="Center" MouseDoubleClick="Label_MouseDoubleClick"/>
+                    <Label x:Name="operadoras" Content="OPERADORAS" Grid.Column="4" Margin="15,0,15,0" FontWeight="Bold" VerticalAlignment="Center" MouseDoubleClick="operadoras_MouseDoubleClick"/>
+                </StackPanel>
+            </DockPanel>
 
-                <TextBlock Foreground="Red" FontWeight="Bold"
-               Canvas.Left="152" Canvas.Top="28" HorizontalAlignment="Center" VerticalAlignment="Top"><Run Language="es-mx" Text="("/><Run Text="Nombre"/><Run Language="es-mx" Text=")"/></TextBlock>
-            </Canvas>
+            <!-- Formulario -->
+            <Grid Grid.Row="1" Margin="40" VerticalAlignment="Center">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
 
-            <Button Grid.Column="1" Content="REGISTRARSE" HorizontalAlignment="Center"
-Height="29" VerticalAlignment="Center" Width="82" Click="BtnRegistrarse_Click"/>
+                <!-- Imagen de usuario -->
+                <Image Source="C:\Users\lizet\OneDrive\Documentos\6TO SEMESTRE\SISTEMAS DE INFORMACIÓN\WPF\ChiapasOculto.WPF\Imagenes\user.png" Width="500" HorizontalAlignment="Center" Grid.Row="0" Margin="0,-80,0,0" Height="250" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
+                    <Image.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform/>
+                            <SkewTransform/>
+                            <RotateTransform Angle="-0.579"/>
+                            <TranslateTransform/>
+                        </TransformGroup>
+                    </Image.RenderTransform>
+                </Image>
 
-            <Button Grid.Column="2" Content="INICIAR SESIÓN" HorizontalAlignment="Center" Height="29" VerticalAlignment="Center" Width="100"/>
-            <Button Grid.Column="3" Content="OPERADORAS" HorizontalAlignment="Center" Height="29" VerticalAlignment="Center" Width="82"/>
-            <TextBlock HorizontalAlignment="Left" Margin="106,116,0,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" FontWeight="Bold" FontFamily="Cooper Black"><Run Text="Bienvenid"/><Run Language="es-mx" Text="o"/><Run Text=" a Chiapas Oculto"/></TextBlock>
+                <!-- Título -->
+                <TextBlock Text="Bienvenido a Chiapas Oculto" FontWeight="Bold" FontFamily="Cooper Black"
+                           HorizontalAlignment="Center" Margin="0,0,0,30" FontSize="22" Grid.Row="1"/>
 
-            <TextBlock HorizontalAlignment="Left" Margin="106,157,0,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" RenderTransformOrigin="-0.053,0.259"><Run Language="es-mx" Text="Correo Electronico"/></TextBlock>
-            <TextBlock HorizontalAlignment="Left" Margin="106,218,0,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top"><Run Language="es-mx" Text="Contraseña"/></TextBlock>
+                <!-- Formulario Campos -->
+                <Grid Grid.Row="2" Margin="0,0,0,20">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="1*"/>
+                        <ColumnDefinition Width="2*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
 
+                    <TextBlock Text="Correo Electrónico" FontSize="16" Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" Margin="0,0,10,10"/>
+                    <TextBox x:Name="TxtCorreo" Height="35" FontSize="16" 
+                             Background="{x:Null}" BorderBrush="#FF101012" Grid.Row="0" Grid.Column="1" Margin="0,0,0,10"/>
 
-            <Button x:Name="btniniciarsesion" Content="Iniciar Sesión" HorizontalAlignment="Left" Margin="112,301,0,0" Grid.Row="1" VerticalAlignment="Top" Width="178" Background="#FF223509" Foreground="White" Click="Button_Click"/>
-            <CheckBox Content="Recordar mi nombre de usuario" HorizontalAlignment="Left" Margin="106,273,0,0" Grid.Row="1" VerticalAlignment="Top" Height="13" Width="189"/>
+                    <TextBlock Text="Contraseña" FontSize="16" Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" Margin="0,0,10,10"/>
+                    <PasswordBox x:Name="TxtContrasena" Height="35" FontSize="16"
+                                 Background="{x:Null}" BorderBrush="#FF101012" Grid.Row="1" Grid.Column="1" Margin="0,0,0,10"/>
+                </Grid>
 
-            <TextBox x:Name="TxtCorreo"  HorizontalAlignment="Left" Margin="106,0,0,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Center" Width="190"  Background="{x:Null}" BorderBrush="#FF101012"/>
+                <!-- Recordar usuario -->
+                <CheckBox Content="Recordar mi nombre de usuario" FontSize="14" Margin="0,0,0,20" Grid.Row="3"/>
 
+                <!-- Botón Iniciar Sesión -->
+                <Button x:Name="btniniciarsesion" Content="Iniciar Sesión"
+                        Width="250" Height="50" Background="#FF223509" Foreground="White"
+                        FontSize="16" Grid.Row="4" HorizontalAlignment="Center"/>
+            </Grid>
+        </Grid>
 
-            <PasswordBox x:Name="TxtContrasena" HorizontalAlignment="Left" Margin="106,239,0,0" Grid.Row="1" VerticalAlignment="Top" Width="190" Background="{x:Null}" BorderBrush="#FF101012"/>
-            <Image Grid.Column="1" Grid.ColumnSpan="4" HorizontalAlignment="Left"  Margin="78,0,0,0" Grid.Row="1" VerticalAlignment="Center" Source="C:\Users\erick\Downloads\chiapasocultowpf\ChiapasOculto.WPF\Imagenes\CCPAQUETE.jpg"/>
-            <Image HorizontalAlignment="Left" Height="170" VerticalAlignment="Top" Width="267" Source="C:\Users\erick\Downloads\chiapasocultowpf\ChiapasOculto.WPF\Imagenes\user.png" RenderTransformOrigin="4.324,0.858" Grid.Row="1" Margin="59,0,0,0"/>
-            <Image HorizontalAlignment="Left" Height="86" VerticalAlignment="Top" Width="150" Source="C:\Users\erick\Downloads\chiapasocultowpf\ChiapasOculto.WPF\Imagenes\logoc.png" Grid.RowSpan="2" Margin="0,-11,0,0"/>
-
-
+        <!-- PANEL DERECHO: IMAGEN -->
+        <Grid Grid.Column="1">
+            <Image Source="C:\Users\lizet\OneDrive\Documentos\6TO SEMESTRE\SISTEMAS DE INFORMACIÓN\WPF\ChiapasOculto.WPF\Imagenes\CCPAQUETE.jpg"
+                   Stretch="Fill"
+                   HorizontalAlignment="Stretch"
+                   VerticalAlignment="Stretch"/>
         </Grid>
     </Grid>
 </Window>
